#210: Fix alignment of form elements on mobile screens.

--- a/scss/trema/login.scss
+++ b/scss/trema/login.scss
@@ -234,3 +234,13 @@ body.local-login {
         }
     }
 }
+
+// Adjust form label and field alignment on small screens.
+@media only screen and (max-width: 560px) {
+    body #page .signupform .form-group.row.fitem {
+         display: block;
+    }
+    body #page .signupform .form-group.row.fitem .col-form-label {
+         max-width: 100%!important;
+    }
+}
